@@ -3,13 +3,17 @@ package com.music.musica.controller;
 import com.music.musica.dto.AuthResponse;
 import com.music.musica.dto.LoginRequest;
 import com.music.musica.dto.UserDTO;
+import com.music.musica.service.TokenBlacklistService;
 import com.music.musica.service.UserService;
 import com.music.musica.security.JwtTokenProvider;
 import com.music.musica.service.CustomUserDetails;
+import lombok.AllArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.web.bind.annotation.*;
 
@@ -18,17 +22,14 @@ import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/auth")
+@AllArgsConstructor
+@CrossOrigin(origins = "http://localhost:4200")
 public class AuthController {
 
     private final AuthenticationManager authenticationManager;
     private final JwtTokenProvider jwtTokenProvider;
     private final UserService userService;
-
-    public AuthController(AuthenticationManager authenticationManager, JwtTokenProvider jwtTokenProvider, UserService userService) {
-        this.authenticationManager = authenticationManager;
-        this.jwtTokenProvider = jwtTokenProvider;
-        this.userService = userService;
-    }
+    private TokenBlacklistService tokenBlacklistService;
 
     @PostMapping("/login")
     public ResponseEntity<AuthResponse> login(@RequestBody LoginRequest request) {
@@ -37,7 +38,11 @@ public class AuthController {
         );
 
         CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        String token = jwtTokenProvider.generateToken(userDetails.getUsername());
+        List<String> roles = userDetails.getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority)
+                .collect(Collectors.toList());
+
+        String token = jwtTokenProvider.generateToken(userDetails.getUsername(), roles);
 
         return ResponseEntity.ok(new AuthResponse(token, userDetails.getUsername(), userDetails.getAuthorities()));
     }
@@ -46,12 +51,21 @@ public class AuthController {
     public ResponseEntity<AuthResponse> register(@RequestBody UserDTO userDTO) {
         UserDTO registeredUser = userService.register(userDTO);
 
-        String token = jwtTokenProvider.generateToken(registeredUser.getUsername());
+        List<String> roles = registeredUser.getRoles();
+
+        String token = jwtTokenProvider.generateToken(registeredUser.getUsername(), roles);
 
         List<SimpleGrantedAuthority> authorities = registeredUser.getRoles().stream()
-                .map(role -> new SimpleGrantedAuthority(role))
-                .collect(Collectors.toList());
+                .map(SimpleGrantedAuthority::new)
+                .toList();
 
         return ResponseEntity.ok(new AuthResponse(token, registeredUser.getUsername(), authorities));
+    }
+    @PostMapping("/logout")
+    public ResponseEntity<?> logout(@RequestHeader("Authorization") String authorization) {
+        String token = authorization.replace("Bearer ", "");
+        tokenBlacklistService.blacklistToken(token);
+
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 }
